<resources>
    <string name="app_name">Nfc Tool</string>
    <string name="read_data">Read Data</string>
    <string name="write_data">Write Data</string>
    <string name="app_logo">App Logo</string>
    <string name="headline">NFC Tag Reader-Writer</string>
    <string name="write">Write</string>
    <string name="enter_data_in_the_text_field_to_write_to_the_nfc_tag">Enter data in the text field to write to the NFC tag.</string>
    <string name="hold_your_device_near_an_nfc_tag_to_read_its_data">Hold your device near an NFC tag to read its data.</string>
</resources>