<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.nfc.tag.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/read_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary"
            android:text="@string/read_data"
            android:textColor="@color/white"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/write_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@color/primary"
            android:backgroundTint="@color/primary"
            android:backgroundTintMode="screen"
            android:text="@string/write_data"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            app:cornerRadius="50dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="414dp"
        android:layout_height="90dp"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/top_margin"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/headline"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="244dp"
        android:layout_height="235dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar2" />

</androidx.constraintlayout.widget.ConstraintLayout>