<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/write_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    android:verticalScrollbarPosition="right">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="411dp"
        android:layout_height="89dp"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/top_margin"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:subtitleTextColor="@color/white"
        app:title="@string/write_data"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:text="@string/enter_data_in_the_text_field_to_write_to_the_nfc_tag"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/write_txt_field"
        android:layout_width="291dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Enter data to write"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:minLines="2"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="left"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_data_write_button"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:text="@string/write"
        app:backgroundTint="@color/green_color"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_txt_field"
        app:layout_constraintVertical_bias="0.642" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="232dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.359"
        app:srcCompat="@drawable/app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>